# python-blueprint

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  Dockerfile  Dockerfile.md  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  dev-requirements.in  dev-requirements.txt  devbox.json  devenv.nix  docker-compose.yml  get_ssl_certificate.sh  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.cursor/rules/: commit-messages.md  python.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  container.yml  docker.yml  pages.yml  python.yml
docs/: api.md  clean_docs.py  conf.py  gen_ref_pages.py  index.md  index.rst
docs/api/: clean_docs.py  conf.py  index.rst
docs/licenses/: license_files.txt  license_report.md  summary.txt
docs/source/: conf.py  index.rst
docs/user_guide/: mkdocs.yml
docs/user_guide/docs/: index.md
examples/: sir_inverse_train.py
examples/reduced_sir_inverse/: reduced_sir_inverse_example.py
examples/reduced_sir_inverse/results/logs/csv/v0/: hparams.yaml  metrics.csv
examples/reduced_sir_inverse/results/models/v0/: v0.ckpt
examples/reduced_sir_inverse/results/models/v0/predictions/: predictions.csv  predictions.pt
examples/sir_inverse/: sir_inverse.py  sir_inverse_example.py  sir_inverse_reduced.py
examples/sir_inverse/data/: generated_data.csv  real_sir_data.csv  synt_h_data.csv  synthetic_data.csv
examples/sir_inverse/logs/csv/sir-inverse-reduced/v0/: metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v1-constant-beta-as-mlp/: metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v2/: metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v3/: hparams.yaml  metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v3-constant-beta/: hparams.yaml  metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v3-new-constant-beta/: hparams.yaml  metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v3-weighted-pde/: hparams.yaml  metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v4-better-residual-loss/: hparams.yaml  metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v4-more-scaled/: hparams.yaml  metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v5-constant-beta-as-mlp/: hparams.yaml
examples/sir_inverse/logs/csv/sir-inverse/v6-ingested-data/: hparams.yaml  metrics.csv
examples/sir_inverse/logs/csv/sir-inverse/v7-real-data/: hparams.yaml  metrics.csv
examples/sir_inverse/logs/tensorboard/sir-inverse-reduced/v0/: events.out.tfevents.1765723856.evolve.local.12807.0  events.out.tfevents.1768831733.Mac.fritz.box.26645.0  events.out.tfevents.1768832966.Mac.fritz.box.26645.1  hparams.yaml
examples/sir_inverse/logs/tensorboard/sir-inverse/v0/: events.out.tfevents.1765102279.Mac.fritz.box.34338.0
examples/sir_inverse/logs/tensorboard/sir-inverse/v2-variant-beta/: events.out.tfevents.1768758052.Mac.fritz.box.65094.0  events.out.tfevents.1768759441.Mac.fritz.box.65094.1
examples/sir_inverse/logs/tensorboard/sir-inverse/v3-constant-beta/: events.out.tfevents.1768378124.Mac.fritz.box.16679.0  events.out.tfevents.1768378794.Mac.fritz.box.16679.1  hparams.yaml
examples/sir_inverse/logs/tensorboard/sir-inverse/v3-weighted-pde/: hparams.yaml  (+2 more)
examples/sir_inverse/models/sir-inverse-reduced/v0/: model.ckpt  predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v0/: predictions.pt
examples/sir_inverse/models/sir-inverse/v1/: predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v2/: predictions.csv
examples/sir_inverse/models/sir-inverse/v2-variant-beta/: predictions.csv
examples/sir_inverse/models/sir-inverse/v3/: model.ckpt  predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v3-constant-beta/: model.ckpt  predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v3-new-constant-beta/: model.ckpt  predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v3-real-data/: predictions.pt
examples/sir_inverse/models/sir-inverse/v3-weighted-pde/: model.ckpt  predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v4-better-residual-loss/: model.ckpt  predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v4-more-scaled/: model.ckpt  predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v5-constant-beta-as-mlp/: model.ckpt  predictions.csv  predictions.pt
examples/sir_inverse/models/sir-inverse/v6-ingested-data/: model.ckpt  predictions.pt
examples/sir_inverse/models/sir-inverse/v7-real-data/: model.ckpt  predictions.csv
examples/sir_inverse/results/models/v0/: v0.ckpt
examples/sir_inverse/results/models/v1/: v10.ckpt  v5.ckpt
examples/sir_inverse/results/models/v2/: v2.ckpt  v6.ckpt
examples/sir_inverse/results/models/v3/: v3.ckpt
examples/sir_inverse/results/models/v4/: v4.ckpt
examples/sir_inverse/results/models/v5/: v5.ckpt
examples/sir_inverse/results/models/v6/: v6.ckpt
fact/: cli.py  lib.py
licenses/: license_files.txt  summary.txt
licenses/license_report/: index.html
nginx/: generate-config.sh  template.web.conf
nginx/ssl/default/: dummy.key  dummy.pem
reference/SUMMARY/: index.html
reference/fact/: index.html
reference/fact/__init__/: index.html
reference/fact/cli/: index.html
reference/fact/lib/: index.html
search/: search_index.json
src/fact/: __about__.py  cli.py  lib.py  py.typed
src/pinn/: __init__.py  ablation_study.py  plot_metrics.py  sir_pinn.py
src/pinn/core/: __init__.py  base.py  config.py  context.py  core.py  dataset.py  nn.py  problem.py  types.py  validation.py
src/pinn/lib/: utils.py
src/pinn/lightning/: __init__.py  callbacks.py  module.py
src/pinn/old/: ablation_study.py  plot_metrics.py
src/pinn/problems/: __init__.py  ode.py  reduced_sir_inverse.py  sir_inverse.py
static/stylesheets/: extra.css
test/: test_fact.py
tests/: test_cli.py  test_fact.py
tests/integration/: test_sir_inverse.py
(+71 files in other folders)
